include the id of the node that throws the exception in the dead letter (#153)
* include the id of the node that throws the exception in the dead letter

* wrap conversion errors in NodeExecutionException and use "unknown" as fallback nodeId

* fixed the broken build